Melhorias e parte CRUD produtos funcionando completamente

--- a/Complete Code/stock/src/main/resources/templates/cadastro-vendedor.html
+++ b/Complete Code/stock/src/main/resources/templates/cadastro-vendedor.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro Cliente</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="" th:href="@{bootstrap.min.css}" >
+    <link rel="stylesheet" href="" th:href="@{/bootstrap.min.css}" >
     <!-- Link css -->
-    <link rel="stylesheet" href="" th:href="@{cadastro.css}" >
+    <link rel="stylesheet" href="" th:href="@{/cadastro.css}" >
     <!-- Link js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>
     <!--Link icons-->
@@ -17,7 +17,7 @@
 
   <body>
     <header class="container-fluid text-center mt-5">
-      <h1> <a th:href="@{painel-vendedor}" >Easy Stock</a> </h1>
+      <h1> <a th:href="@{/painel-vendedor}" >Easy Stock</a> </h1>
     </header>
 
     <main>
