--- a/Complete Code/stock/src/main/resources/templates/painel-cliente.html
+++ b/Complete Code/stock/src/main/resources/templates/painel-cliente.html
@@ -23,13 +23,13 @@
         <button onclick="document.location='sair'"> Sair Conta </button>  <!-- Não é necessário TAG do thymeleaf-->
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='produtos'"> Ver Produtos </button>
+        <button onclick="document.location='cliente/produtos'"> Ver Produtos </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='carrinho'"> Ver Carrinho de Compras </button>
+        <button onclick="document.location='cliente/carrinho'"> Ver Carrinho de Compras </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='pedidos'"> Ver Pedidos </button>
+        <button onclick="document.location='cliente/pedidos'"> Ver Pedidos </button>
       </div>   
     </div>
   </div>
