--- a/Complete Code/stock/src/main/resources/templates/painel-vendedor.html
+++ b/Complete Code/stock/src/main/resources/templates/painel-vendedor.html
@@ -23,13 +23,13 @@
         <button onclick="document.location='sair'"> Sair Conta </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='gerenciar'"> Gerenciar Produtos </button>
+        <button onclick="document.location='vendedor/gerenciar'"> Gerenciar Produtos </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='historico'"> Ver Histórico de Vendas do Site </button>
+        <button onclick="document.location='vendedor/historico'"> Ver Histórico de Vendas do Site </button>
       </div>
       <div class="input-container mt-4">
-        <button onclick="document.location='cadastro-vendedor'"> Cadastrar Novo Vendedor </button>
+        <button onclick="document.location='vendedor/cadastro-vendedor'"> Cadastrar Novo Vendedor </button>
       </div>   
     </div>
   </div>
