--- a/Complete Code/stock/src/main/resources/templates/carrinho-compras.html
+++ b/Complete Code/stock/src/main/resources/templates/carrinho-compras.html
@@ -20,7 +20,7 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="painel-cliente" >Conta Cliente</a>
+                <a class="navbar-brand" href="/painel-cliente" >Conta Cliente</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuSanduiche" aria-expanded="false">
                     <span class="sr-only">Menu</span>
                     <span class="icon-bar"></span>
@@ -41,7 +41,7 @@
                       <li class="nav-item"><a href="pedidos" class="nav-link" type="submit" >Ver Pedidos</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item"><a href="sair" class="nav-link" type="submit" >Sair</a></li>
+                  <li class="nav-item"><a href="/sair" class="nav-link" type="submit" >Sair</a></li>
                 </ul>
             </div>
         </div>
@@ -55,7 +55,7 @@
 						  <h2>Carrinho <b>Compras</b></h2>
 					</div>
 					<div class="col-sm-6">
-						<a th:href="@{painel-cliente}" method="post" action="" th:action="/efetuar-pedido" class="btn btn-success" data-toggle="submit"><i class="material-icons">shopping_cart_checkout</i> <span>Efetuar Pedido</span></a>
+						<a th:href="@{/cliente/pedidos}" method="post" action="" th:action="/api/efetuar-pedido" class="btn btn-success" data-toggle="submit"><i class="material-icons">shopping_cart_checkout</i> <span>Efetuar Pedido</span></a>
 					</div>
           </div>
             </div>
@@ -84,7 +84,7 @@
                     <div th:id="'removeCartModal'+${produto.id}" class="modal fade">
                       <div class="modal-dialog">
                         <div class="modal-content">
-                          <form method="post" action="" th:action="@{/remove-carrinho/{id}(id=${produto.id})}" >
+                          <form method="post" action="" th:action="@{/api/remove-carrinho/{id}(id=${produto.id})}" >
                             <div class="modal-header">						
                               <h4 class="modal-title">Remover Produto do Carrinho</h4>
                               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
