--- a/Complete Code/stock/src/main/resources/templates/historico-vendas-site.html
+++ b/Complete Code/stock/src/main/resources/templates/historico-vendas-site.html
@@ -19,7 +19,7 @@
 	<nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="painel-vendedor" >Conta Vendedor</a>
+                <a class="navbar-brand" href="/painel-vendedor" >Conta Vendedor</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuSanduiche" aria-expanded="false">
                     <span class="sr-only">Menu</span>
                     <span class="icon-bar"></span>
@@ -40,7 +40,7 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a href="cadastro-vendedor" class="nav-link" type="submit" >Cadastrar Vendedor</a></li>
-                    <li class="nav-item"><a href="sair" class="nav-link" type="submit" >Sair</a></li>
+                    <li class="nav-item"><a href="/sair" class="nav-link" type="submit" >Sair</a></li>
                 </ul>
             </div>
         </div>
