--- a/Complete Code/stock/src/main/resources/templates/listagem-produtos.html
+++ b/Complete Code/stock/src/main/resources/templates/listagem-produtos.html
@@ -19,7 +19,7 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="painel-cliente" >Conta Cliente</a>
+                <a class="navbar-brand" href="/painel-cliente" >Conta Cliente</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuSanduiche" aria-expanded="false">
                     <span class="sr-only">Menu</span>
                     <span class="icon-bar"></span>
@@ -40,7 +40,7 @@
                         <li class="nav-item"><a href="pedidos" class="nav-link" type="submit" >Ver Pedidos</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item"><a href="sair" class="nav-link" type="submit" >Sair</a></li>
+                  <li class="nav-item"><a href="/sair" class="nav-link" type="submit" >Sair</a></li>
                 </ul>
             </div>
         </div>
@@ -54,12 +54,21 @@
 						<h2>Listagem <b>Produtos</b></h2>
 					</div>
 					<div class="col-sm-6">
-						<a href="carrinho-compras" class="btn btn-info" data-toggle="submit"><i class="material-icons">shopping_cart</i> <span>Ver Carrinho</span></a>
+						<a href="carrinho" class="btn btn-info" data-toggle="submit"><i class="material-icons">shopping_cart</i> <span>Ver Carrinho</span></a>
 					</div>
                 </div>
             </div>
             <table class="table table-striped table-hover">
                 <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>Descrição</th>
+						<th>Preço</th>
+                        <th>Estoque</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
                     <tr th:each="produto: ${produtos}" >
                       <td th:text="${produto.idProduto}" />
                       <td th:text="${produto.nome}" />
@@ -67,7 +76,7 @@
                       <td th:text="${produto.preco}" />
                       <td th:text="${produto.quantidade}" />
                       <td>
-                        <a href="#addCartModal" method="post" action="" th:action="@{/add-carrinho/{id}(id=${produto.idProduto})}" class="addCart" data-toggle="modal"><i class="material-icons" title="Adicionar ao carrinho">add_shopping_cart</i></a>
+                        <a href="#addCartModal" method="post" action="" th:action="@{/api/add-carrinho/{id}(id=${produto.idProduto})}" class="addCart" data-toggle="modal"><i class="material-icons" title="Adicionar ao carrinho">add_shopping_cart</i></a>
                       </td>
                     </tr>
                 </tbody>
