Implementações de pedido em andamento

--- a/Complete Code/stock/src/main/resources/templates/cadastro-vendedor.html
+++ b/Complete Code/stock/src/main/resources/templates/cadastro-vendedor.html
@@ -23,7 +23,7 @@
     <main>
       
       <!-- Início do formulário -->
-      <form method="post" action="/cadastrar-vendedor" class="container-fluid mt-5 mb-5 flex-container">
+      <form method="post" action="/api/cadastrar-vendedor" class="container-fluid mt-5 mb-5 flex-container">
         <h2 class="text-center"> Cadastro Vendedor </h2>
         <section class="mt-4">
           <!-- Username -->
