--- a/Complete Code/stock/src/main/resources/templates/pedidos.html
+++ b/Complete Code/stock/src/main/resources/templates/pedidos.html
@@ -93,8 +93,23 @@
                                                 <input style="width:65px;display:inline" type="text" class="form-control" th:value="${pedido.idPedido}" readonly>
                                             </div>
                                             <div class="modal-body">
-                                                <p th:text="${pedido.listaItens}" ></p>
-                                            </div>
+                                                <thead>
+                                                    <tr>
+                                                        <th>ID Pedido</th>
+                                                        <th>Nome</th>
+                                                        <th>Descrição</th>
+                                                        <th>Preço</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <div th:each="produto: ${produtos}" >
+                                                        <tr>
+                                                        <td th:text="${produto.idPedido}" />
+                                                        <td th:text="${produto.nome}" />
+                                                        <td th:text="${produto.descricao}" />
+                                                        <td th:text="${produto.preco}" />
+                                                    </tr>
+                                                </div>
                                             <div class="form-group">
                                                 <label>Total Pedido</label>
                                                 <input style="width:70px;display:inline" type="text" class="form-control pull-right" th:value="${pedido.orcamento}" readonly>
